--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
         </div>
         </div>
-
+</div>
     <footer>
         <div class="foot-panel1">
             Back to Top
@@ -301,6 +301,5 @@
             </div>
         </div>
     </footer>
-<div class="class"></div>
 </body>
 </html>
