--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
         </div>
     </header>
     <div class="hero-section">
-        <div class="hero-message">
-            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.<a> Click here to go to amazon.in
-            </a></p>
+        <div class="container">
+            <div class="hero-message">
+                <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.<a> Click here to go to amazon.in
+                </a></p>
+            </div>
         </div>
     </div>
 
-    <div class="shop-section">
+   <!-- <div class="shop-section">
         <div class="box1 box border">
             <div class="box-content">
                 <h2>Get your game on.</h2>
@@ -239,6 +241,9 @@
         </div>
         </div>
 </div>
+-->
+
+
     <footer>
         <div class="foot-panel1">
             Back to Top
