--- a/index.html
+++ b/index.html
@@ -252,42 +252,42 @@
         <div class="foot-panel2">
             <ul>
                 <p>Get to Know Us</p>
-                <a>Careers</a>
-                <a>Blog</a> 
-                <a>About Amazon</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a href="#">Careers</a>
+                <a href="#">Blog</a> 
+                <a href="#">About Amazon</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Amazon Devices</a>
+                <a href="#">Amazon Science</a>
             </ul>
             <ul>
                 <p>Make Money with Us</p>
-                <a>Sell products on Amazon</a>
-                <a>Sell on Amazon Business</a> 
-                <a>Sell apps on Amazon</a>
-                <a>Become an Affiliate</a>
-                <a>Advertise your Products</a>
-                <a>Self Publish with Us</a>
-                <a>Host an Amazon Hub</a>
-                <a>> See More Make Money with Us</a>
+                <a href="#">Sell products on Amazon</a>
+                <a href="#">Sell on Amazon Business</a> 
+                <a href="#">Sell apps on Amazon</a>
+                <a href="#">Become an Affiliate</a>
+                <a href="#">Advertise your Products</a>
+                <a href="#">Self Publish with Us</a>
+                <a href="#">Host an Amazon Hub</a>
+                <a href="#">> See More Make Money with Us</a>
             </ul>
             <ul>
                 <p>Amazon Payment Products</p>
-                <a>Amazon Business Card</a>
-                <a>Shop with Points</a> 
-                <a>Reload your Balance</a>
-                <a>Amazon Currency Converter</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a href="#">Amazon Business Card</a>
+                <a href="#">Shop with Points</a> 
+                <a href="#">Reload your Balance</a>
+                <a href="#">Amazon Currency Converter</a>
+                <a href="#">Amazon Devices</a>
+                <a href="#">Amazon Science</a>
             </ul>
             <ul>
                 <p>Let Us Help You</p>
-                <a>Amazon and Covid-19</a>
-                <a>Your Account</a> 
-                <a>Your Orders</a>
-                <a>Shipping Rates & Policies</a>
-                <a>Returns & Replacements</a>
-                <a>Manage Your Content and Devices</a>
-                <a>Help</a>
+                <a href="#">Amazon and Covid-19</a>
+                <a href="#">Your Account</a> 
+                <a href="#">Your Orders</a>
+                <a href="#">Shipping Rates & Policies</a>
+                <a href="#">Returns & Replacements</a>
+                <a href="#">Manage Your Content and Devices</a>
+                <a href="#">Help</a>
             </ul>
         </div>
 
@@ -297,9 +297,9 @@
 
         <div class="foot-panel4">
             <div class="pages">
-                <a>Conditions of Use</a>
-                <a>Privacy Notice</a>
-                <a>Your Ads Privacy Choices</a>
+                <a href="#">Conditions of Use</a>
+                <a href="#">Privacy Notice</a>
+                <a href="#">Your Ads Privacy Choices</a>
             </div>
             <div class="copyright">
                 © 1996-2025, Amazon.com, Inc. or its affiliates 
